:bug: FIX wordwrap

--- a/style.css
+++ b/style.css
@@ -176,11 +176,12 @@
     height: 15px;
 }
 
-
 .vidplayer-timer{
     cursor: default;
     font-size: 12px;
     color: var(--tile-color);
+    word-break: keep-all;
+    overflow-wrap: normal;
 }
 /*  */
 /*  */
